<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="201dp"
                android:adjustViewBounds="true"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:src="@drawable/fold4" />
            <TextView
                style="@style/TextContent.Small.White"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:background="#4D000000"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:text="@string/dummy_photos" />
        </FrameLayout>
        <TextView
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dummy_value"
            android:textSize="32sp" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:textSize="12sp"
            android:layout_marginBottom="16dp"
            android:text="@string/stock" />

        <TextView
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            android:text="@string/specification" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/display" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:textSize="14sp"
                    android:text="@string/content_specs_display" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    android:text="@string/size" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:textSize="14sp"
                    android:text="@string/content_specs_size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    android:text="@string/battery" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:textSize="14sp"
                    android:text="@string/content_specs_battery" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/TextContent.Subtitle"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            android:text="@string/seller" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/john_xina" />

            <TextView
                style="@style/TextContent"
                android:layout_marginLeft="6dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/my_name" />
        </RelativeLayout>

        <Button
            android:id="@+id/beli"
            android:text="@string/buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="3dp" />
        <Button
            android:id="@+id/call_cs"
            android:text="@string/call_cs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</ScrollView>